# tz-lookup-simple

./: Cargo.toml  readme.md
src/: lib.rs  update_tzdata.rs
